<resources>
    <string name="app_name">现场新闻生产</string>
    <string name="action_settings">设置</string>
    <string name="title">四川广播电视总台—现场新闻生产</string>
    <string name="login">登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="video_sheet">视频抽图</string>
    <string name="mobile_gallery">手机相册</string>
    <string name="new_title">新闻名称:</string>
    <string name="news_keyword">关键字:</string>
    <string name="hint_news_title">请输入新闻名称</string>
    <string name="hint_news_keyword">请输入关键字</string>
    <string name="news_manuscript">新闻文稿:</string>
    <string name="hint_news_manuscript">请输入新闻文稿</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="news_tile">标题</string>
    <string name="news_status">状态:</string>
    <string name="news_status_content">合成完成-正在入库</string>
    <string name="exit">退出</string>
    <string name="saveliuliang">存储及流量查询</string>
    <string name="textsetting">个人设置</string>
    <string name="username_regest_empty">用户名不能为空,请重新输入用户名</string>
    <string name="password_notempty">密码不能为空,请重新输入密码</string>
    <string-array name="week_name">
        <item>Su</item>
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
    </string-array>

    <string name="pick_range">Pick Range</string>
    <string name="price_picker_dash" translatable="false">" - "</string>
    <string name="price_dialog_title">Price</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>

    <!--上拉刷新下拉加载-->
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="btm_msg"><![CDATA[Powered By Panasonic & CTVIT Version 1.0.4]]></string>
    <string name="title_activity_about">关于我们</string>
    <string name="success">下载完成</string>
    <string name="error">下载失败</string>
    <string name="sdcarderror">SDCard不存在或者写保护</string>
    <string name="title_activity_advise">AdviseActivity</string>
</resources>
